--- a/src/app/features/organisation-section/components/customer/customer.component.html
+++ b/src/app/features/organisation-section/components/customer/customer.component.html
@@ -200,6 +200,10 @@
 
         <!-- Customer Table -->
         <h3 class="mt-6 font-bold">Customer List</h3>
+
+        <div class="rounded-lg w-full overflow-x-auto">
+            <div class="rounded-lg w-full inline-block whitespace-nowrap">
+    
         <table class="w-full border-collapse border border-gray-300 mt-4">
             <thead>
                 <tr class="bg-gray-100">
@@ -247,6 +251,7 @@
                 </tr>
             </tbody>
         </table>
+        </div></div>
     </div>
 
     <!-- Customer Domain Section -->
@@ -396,6 +401,9 @@
 
         <!-- Category Table -->
         <h3 class="mt-6 font-bold">Category List</h3>
+        <div class="rounded-lg w-full overflow-x-auto">
+            <div class="rounded-lg w-full inline-block whitespace-nowrap">
+    
         <table class="w-full border-collapse border border-gray-300 mt-4">
             <thead>
                 <tr class="bg-gray-100">
@@ -421,6 +429,7 @@
                 </tr>
             </tbody>
         </table>
+        </div></div>
     </div>
 
 </div>
