--- a/src/app/features/organisation-section/components/employee/employee.component.html
+++ b/src/app/features/organisation-section/components/employee/employee.component.html
@@ -108,7 +108,7 @@
 
                 <!-- Passport Yes/No -->
                 <div class="form-group">
-                    <label class="block font-semibold">Do you have a passport?</label>
+                    <label class="block">Passport Available?</label>
                     <div class="flex space-x-4 mt-2">
                         <label class="flex items-center">
                             <input type="radio" name="passport" [(ngModel)]="employee.is_passport" value="1"
