--- a/src/app/features/organisation-section/components/employee/employee.component.html
+++ b/src/app/features/organisation-section/components/employee/employee.component.html
@@ -225,6 +225,7 @@
                     <th class="border p-2">Date of Birth</th>
                     <th class="border p-2">Blood Group</th>
                     <th class="border p-2">Date of Joining</th>
+                    
                     <th class="border p-2">Action</th>
                 </tr>
             </thead>
@@ -239,7 +240,7 @@
                     <td class="border p-2">{{ employee.role_name }}</td>
                     <td class="border p-2">{{ employee.department_name }}</td>
                     <td class="border p-2">{{ employee.is_passport ? 'Yes' : 'No' }}</td>
-                    <td class="border p-2">{{ employee.passport_validity| date:'dd-MMM-yyyy' }}</td>
+                    <td class="border p-2">  {{ employee.passport_validity ? (employee.passport_validity | date:'dd-MMM-yyyy') : 'NA' }} </td>
                     <td class="border p-2">{{ employee.user_current_address }}</td>
                     <td class="border p-2">{{ employee.user_DOB | date:'dd-MMM-yyyy' }}</td>
                     <td class="border p-2">{{ employee.user_blood_group }}</td>
