project role navbar

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -33,9 +33,9 @@
           class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
           Department
         </a>
-        <a (click)="navigateToEmployeeSection('position')" [class.active-link]="isEmployeeSectionActive('position')"
+        <a (click)="navigateToEmployeeSection('project_role')" [class.active-link]="isEmployeeSectionActive('project_role')"
           class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
-          Position
+          Project Role
         </a>
         <a (click)="navigateToEmployeeSection('skills')" [class.active-link]="isEmployeeSectionActive('skills')"
           class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
