--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -37,6 +37,10 @@
           class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
           Project Role
         </a>
+        <a (click)="navigateToEmployeeSection('designation')" [class.active-link]="isEmployeeSectionActive('designation')"
+          class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
+          Designation
+        </a>
         <a (click)="navigateToEmployeeSection('skills')" [class.active-link]="isEmployeeSectionActive('skills')"
           class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
           Skills
