--- a/src/app/features/organisation-section/components/employee/employee.component.html
+++ b/src/app/features/organisation-section/components/employee/employee.component.html
@@ -209,7 +209,7 @@
                     <th class="border p-2">Name</th>
                     <th class="border p-2">Email</th>
                     <th class="border p-2">Contact Number</th>
-                    <th class="border p-2">Emergency Contact</th>
+                    <!-- <th class="border p-2">Emergency Contact</th>
                     <th class="border p-2">Role</th>
                     <th class="border p-2">Department</th>
                     <th class="border p-2">Passport</th>
@@ -217,7 +217,7 @@
                     <th class="border p-2">Current Address</th>
                     <th class="border p-2">Date of Birth</th>
                     <th class="border p-2">Blood Group</th>
-                    <th class="border p-2">Date of Joining</th>
+                    <th class="border p-2">Date of Joining</th> -->
 
                     <th class="border p-2">Action</th>
                 </tr>
@@ -229,7 +229,7 @@
                     <td class="border p-2">{{ employee.user_first_name }} {{ employee.user_last_name }}</td>
                     <td class="border p-2">{{ employee.user_email }}</td>
                     <td class="border p-2">{{ employee.user_contact }}</td>
-                    <td class="border p-2">{{ employee.user_emergency_contact }}</td>
+                    <!-- <td class="border p-2">{{ employee.user_emergency_contact }}</td>
                     <td class="border p-2">{{ employee.role_name }}</td>
                     <td class="border p-2">{{ employee.department_name }}</td>
                     <td class="border p-2">{{ employee.is_passport ? 'Yes' : 'No' }}</td>
@@ -237,9 +237,9 @@
                     <td class="border p-2">{{ employee.user_current_address }}</td>
                     <td class="border p-2">{{ employee.user_DOB | date:'dd-MMM-yyyy' }}</td>
                     <td class="border p-2">{{ employee.user_blood_group }}</td>
-                    <td class="border p-2">{{ employee.user_DOJ | date:'dd-MMM-yyyy' }}</td>
+                    <td class="border p-2">{{ employee.user_DOJ | date:'dd-MMM-yyyy' }}</td> -->
                     <td class="border p-2">
-                        <button class="bg-blue-500 text-white px-2 py-1 rounded"
+                        <button class="bg-blue-500 text-white px-2 py-1 rounded m-2"
                             (click)="assignDetails(employee)">Assign Details</button>
                         <button class="bg-red-500 text-white px-2 py-1 rounded"
                             (click)="deleteEmployee(employee.user_id)">Delete</button>
