--- a/src/app/features/organisation-section/components/customer/customer.component.html
+++ b/src/app/features/organisation-section/components/customer/customer.component.html
@@ -32,18 +32,15 @@
 
                 <!-- Email (Required & Valid Email) -->
                 <div class="form-group">
-                    <label>Email Address*</label>
+                    <label>Email Address</label>
                     <input type="email" class="border p-2 w-full rounded-md" [(ngModel)]="customer.email"
-                        #email="ngModel" name="email" required
+                        #email="ngModel" name="email" 
                         pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
-                        [ngClass]="{'border-red-500': (email.invalid && email.touched) || (customerForm.submitted && email.invalid)}">
-                    <span class="text-red-500 text-sm"
-                        *ngIf="(email.invalid && email.touched) || (customerForm.submitted && email.invalid)">Valid
-                        Email is required</span>
+>
                 </div>
 
                 <!-- Phone Number (Required & 10 Digits) -->
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label>Phone Number*</label>
                     <input type="text" class="border p-2 w-full rounded-md" [(ngModel)]="customer.phone"
                         #phone="ngModel" name="phone" required pattern="^[0-9]{10}$"
@@ -52,7 +49,20 @@
                         *ngIf="(phone.invalid && phone.touched) || (customerForm.submitted && phone.invalid)">Enter
                         a valid
                         10-digit phone number</span>
+                </div> -->
+
+                <div class="form-group">
+                    <label>Phone Number</label>
+                    <input type="text" class="border p-2 w-full rounded-md" [(ngModel)]="customer.phone"
+                        #phone="ngModel" name="phone" pattern="^\d{10}$"
+                        [ngClass]="{'border-red-500': (phone.invalid && phone.touched) || (customerForm.submitted && phone.invalid)}">
+                    
+                    <span class="text-red-500 text-sm"
+                        *ngIf="(phone.touched && phone.value && phone.invalid) || (customerForm.submitted && phone.value && phone.invalid)">
+                        Enter a valid 10-digit phone number
+                    </span>
                 </div>
+                
 
                 <div class="form-group">
                     <label>Alternate Phone Number</label>
@@ -113,16 +123,16 @@
 
                 <!-- Customer Domain -->
                 <div class="form-group">
-                    <label>Customer Domain*</label>
+                    <label>Customer Segment*</label>
                     <select class="border p-2 w-full rounded-md" [(ngModel)]="selectedDomain" #domain="ngModel"
                         name="domain" required
                         [ngClass]="{'border-red-500': (domain.invalid && domain.touched) || (customerForm.submitted && domain.invalid)}">
-                        <option value="" disabled selected>Select Domain</option>
+                        <option value="" disabled selected>Select Segment</option>
                         <option *ngFor="let domain of domains" [value]="domain">{{ domain }}</option>
                     </select>
                     <span class="text-red-500 text-sm"
                         *ngIf="domain.invalid && (domain.touched || customerForm.submitted)">
-                        Domain is required
+                        Segment is required
                     </span>
                 </div>
 
@@ -142,7 +152,7 @@
                 </div>
 
                 <!-- City (Required) -->
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label>City*</label>
                     <input type="text" class="border p-2 w-full rounded-md" [(ngModel)]="customer.city" #city="ngModel"
                         name="city" required
@@ -150,10 +160,20 @@
                     <span class="text-red-500 text-sm"
                         *ngIf="city.invalid && (city.touched || customerForm.submitted)">City is
                         required</span>
+                </div> -->
+                <div class="form-group">
+                    <label>City</label>
+                    <input type="text" class="border p-2 w-full rounded-md" [(ngModel)]="customer.city"
+                        #city="ngModel" name="city"
+                        [ngClass]="{'border-red-500': (city.touched && city.invalid) || (customerForm.submitted && city.invalid)}">
+                    <span class="text-red-500 text-sm"
+                        *ngIf="(city.touched && city.invalid) || (customerForm.submitted && city.invalid)">
+                        Enter a valid city
+                    </span>
                 </div>
 
                 <!-- State (Required) -->
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label>State*</label>
                     <input type="text" class="border p-2 w-full rounded-md" [(ngModel)]="customer.state"
                         #state="ngModel" name="state" required
@@ -161,9 +181,24 @@
                     <span class="text-red-500 text-sm"
                         *ngIf="state.invalid && (state.touched || customerForm.submitted)">State is
                         required</span>
-                </div>
-                <!-- Pincode (Required & 6 Digits) -->
+                </div> -->
+
+
                 <div class="form-group">
+                    <label>State</label>
+                    <input type="text" class="border p-2 w-full rounded-md" [(ngModel)]="customer.state"
+                        #state="ngModel" name="state"
+                        [ngClass]="{'border-red-500': (state.touched && state.invalid) || (customerForm.submitted && state.invalid)}">
+                    <span class="text-red-500 text-sm"
+                        *ngIf="(state.touched && state.invalid) || (customerForm.submitted && state.invalid)">
+                        Enter a valid state
+                    </span>
+                </div>
+
+
+
+                <!-- Pincode (Required & 6 Digits) -->
+                <!-- <div class="form-group">
                     <label>Pincode*</label>
                     <input type="text" class="border p-2 w-full rounded-md" [(ngModel)]="customer.pincode"
                         #pincode="ngModel" name="pincode" required pattern="^[0-9]{6}$"
@@ -171,10 +206,30 @@
                     <span class="text-red-500 text-sm"
                         *ngIf="pincode.invalid && (pincode.touched || customerForm.submitted)">Enter a valid
                         6-digit pincode</span>
+                </div> -->
+                <div class="form-group">
+                    <label>Pincode</label>
+                    <input type="text" class="border p-2 w-full rounded-md" [(ngModel)]="customer.pincode"
+                        #pincode="ngModel" name="pincode" pattern="^[0-9]{6}$"
+                        [ngClass]="{'border-red-500': (pincode.touched && pincode.value && pincode.invalid) || (customerForm.submitted && pincode.value && pincode.invalid)}">
+                    <span class="text-red-500 text-sm"
+                        *ngIf="(pincode.touched && pincode.value && pincode.invalid) || (customerForm.submitted && pincode.value && pincode.invalid)">
+                        Enter a valid 6-digit pincode
+                    </span>
                 </div>
 
                 <!-- Country (Required) -->
                 <div class="form-group">
+                    <label>Country</label>
+                    <input type="text" class="border p-2 w-full rounded-md" [(ngModel)]="customer.country"
+                        #country="ngModel" name="country"
+                        [ngClass]="{'border-red-500': (country.touched && country.invalid) || (customerForm.submitted && country.invalid)}">
+                    <span class="text-red-500 text-sm"
+                        *ngIf="(country.touched && country.invalid) || (customerForm.submitted && country.invalid)">
+                        Enter a valid country
+                    </span>
+                </div>
+                <!-- <div class="form-group">
                     <label>Country*</label>
                     <input type="text" class="border p-2 w-full rounded-md" [(ngModel)]="customer.country"
                         #country="ngModel" name="country" required
@@ -182,12 +237,13 @@
                     <span class="text-red-500 text-sm"
                         *ngIf="country.invalid && (country.touched || customerForm.submitted)">Enter
                         Country</span>
-                </div>
+                </div> -->
                 <div class="form-group">
                     <label>Customer Description</label>
-                    <input type="text" class="border p-2 w-full rounded-md" [(ngModel)]="customer.description"
-                        name="description">
+                    <textarea class="border p-2 w-full rounded-md" [(ngModel)]="customer.description" 
+                        name="description" rows="3"></textarea>
                 </div>
+                
             </div>
 
             <!-- Submit Button -->
@@ -216,7 +272,7 @@
                     <th class="border p-2">Customer Status</th>
                     <th class="border p-2">Customer Sector</th>
                     <th class="border p-2">Customer Industry</th>
-                    <th class="border p-2">Customer Domain</th>
+                    <th class="border p-2">Customer Segment</th>
                     <th class="border p-2">Customer Type</th>
                     <th class="border p-2">City</th>
                     <th class="border p-2">State</th>
@@ -230,20 +286,20 @@
                 <tr *ngFor="let customer of customers; let i = index" class="hover:bg-gray-50">
                     <td class="border p-2">{{ i + 1 }}</td> <!-- Serial Number -->
                     <td class="border p-2">{{ customer.customer_name }}</td>
-                    <td class="border p-2">{{ customer.customer_company_website }}</td>
-                    <td class="border p-2">{{ customer.customer_email }}</td>
-                    <td class="border p-2">{{ customer.customer_phone }}</td>
-                    <td class="border p-2">{{ customer.customer_alternate_phone }}</td>
+                    <td class="border p-2">{{ customer.customer_company_website || '-'}}</td>
+                    <td class="border p-2">{{ customer.customer_email || '-' }}</td>
+                    <td class="border p-2">{{ customer.customer_phone || '-' }}</td>
+                    <td class="border p-2">{{ customer.customer_alternate_phone || '-' }}</td>
                     <td class="border p-2">{{ customer.is_active ? 'Active' : 'Inactive' }}</td>
                     <td class="border p-2">{{ customer.sector || '-' }}</td>
                     <td class="border p-2">{{ customer.industry || '-' }}</td>
                     <td class="border p-2">{{ customer.domain || '-' }}</td>
                     <td class="border p-2">{{ customer.is_new ? 'Potential' : 'Existing' }}</td>
-                    <td class="border p-2">{{ customer.customer_city }}</td>
-                    <td class="border p-2">{{ customer.customer_state }}</td>
-                    <td class="border p-2">{{ customer.customer_pincode }}</td>
-                    <td class="border p-2">{{ customer.customer_country }}</td>
-                    <td class="border p-2">{{ customer.customer_description }}</td>
+                    <td class="border p-2">{{ customer.customer_city || '-' }}</td>
+                    <td class="border p-2">{{ customer.customer_state || '-' }}</td>
+                    <td class="border p-2">{{ customer.customer_pincode || '-' }}</td>
+                    <td class="border p-2">{{ customer.customer_country || '-' }}</td>
+                    <td class="border p-2">{{ customer.customer_description || '-' }}</td>
                     <td class="border p-2">
                         <button class="bg-red-500 text-white px-2 py-1 rounded"
                             (click)="deleteCustomer(customer.customer_id)">Delete</button>
@@ -368,24 +424,24 @@
 
                 <!-- Domain Dropdown + Textbox -->
                 <div class="form-group">
-                    <label>Domain*</label>
+                    <label>Segment*</label>
                     <div class="flex flex-col">
                         <select class="border p-2 w-full rounded-md" [(ngModel)]="selectedDomain" #domain="ngModel"
                             name="domain" required [disabled]="newDomain || (!selectedIndustry && !newIndustry)"
                             [ngClass]="{'border-red-500': (domain.invalid && domain.touched) || (categoryForm.submitted && domain.invalid)}">
-                            <option value="" disabled selected>Select Domain</option>
+                            <option value="" disabled selected>Select Segment</option>
                             <option *ngFor="let domain of domains" [value]="domain">{{ domain }}</option>
                         </select>
                         <span class="text-red-500 text-sm"
                             *ngIf="(domain.invalid && domain.touched) || (categoryForm.submitted && domain.invalid)">
-                            Domain is required
+                            Segment is required
                         </span>
                     </div>
                 </div>
 
                 <!-- New Domain Textbox -->
                 <div class="form-group">
-                    <label>Or Add New Domain</label>
+                    <label>Or Add New Segment</label>
                     <input type="text" class="border p-2 w-full rounded-md" [(ngModel)]="newDomain" name="newDomain"
                         placeholder="Enter new domain" [disabled]="!selectedIndustry && !newIndustry">
                 </div>
@@ -410,7 +466,7 @@
                     <th class="border p-2">S.No.</th>
                     <th class="border p-2">Sector</th>
                     <th class="border p-2">Industry</th>
-                    <th class="border p-2">Domain</th>
+                    <th class="border p-2">Segment</th>
                     <th class="border p-2">Action</th>
                 </tr>
             </thead>
