deliverable and select toggle

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -146,10 +146,10 @@
       class="px-3 py-1 text-gray-700 hover:bg-blue-400 hover:text-white rounded transition">
       Export My Timesheet
     </a>
-    <!-- <a [routerLink]="['/timesheet', 'managers-hub']" routerLinkActive="active-link"
+    <a [routerLink]="['/timesheet', 'managers-hub']" routerLinkActive="active-link"
       class="px-3 py-1 text-gray-700 hover:bg-blue-500 hover:text-white rounded transition">
       Manager's Hub
-    </a> -->
+    </a>
   </div>
 
   <!-- Navbar Center (Resource Management Links - Conditionally Shown) -->
